--- a/assets/post/style.css
+++ b/assets/post/style.css
@@ -212,3 +212,8 @@
 
     /* Gallery: Base */
     @import "components/gallery/gallery.css";
+
+/* COMPONENTS: DEMO NAV ===================================================== */
+
+    /* Demo Nav: Base */
+    @import "components/navigation/demo-nav.css";
