--- a/assets/post/spec/palette.css
+++ b/assets/post/spec/palette.css
@@ -18,6 +18,8 @@ $orange: #ff9d00;
 $black: #222;
 $pink: #da2f6d;
 
+$highlight: $pink;
+
 /* Utility Colors */
 $color-utility--danger: $red;
 $color-utility--warning: $orange;
