--- a/assets/post/components/navigation/navigation-basic.css
+++ b/assets/post/components/navigation/navigation-basic.css
@@ -103,6 +103,7 @@
         width: auto;
         height: auto;
         background: transparent;
+        margin-right: -$basic-nav-item-padding;
     }
 
 }
