--- a/assets/post/core/helpers.css
+++ b/assets/post/core/helpers.css
@@ -49,6 +49,19 @@
     padding: 0 !important;
 }
 
+/* Margins ================================================================== */
+.reset {
+    margin: 0;
+}
+
+.reset--top {
+    margin-top: 0;
+}
+
+.reset--bottom {
+    margin-bottom: 0;
+}
+
 /* Lists ==================================================================== */
 .ul-reset {
     list-style: none;
