--- a/assets/post/spec/palette.css
+++ b/assets/post/spec/palette.css
@@ -15,7 +15,7 @@ $purple: #ac5bff;
 $green: #50d76e;
 $red: #ff5d5d;
 $orange: #ff9d00;
-$black: #222;
+$black: #1d0e42;
 $pink: #da2f6d;
 
 $highlight: $pink;
