updating content for demo page, adding email sharing scaffolding

--- a/assets/post/components/breadcrumbs/breadcrumbs.css
+++ b/assets/post/components/breadcrumbs/breadcrumbs.css
@@ -70,6 +70,10 @@
         border-left-color: $breadcrumbs-divider-color;
     }
 
+    &:first-child {
+        margin-left: 0;
+    }
+
     &:last-child {
 
         &:after {
