--- a/assets/post/components/content/section-titles.css
+++ b/assets/post/components/content/section-titles.css
@@ -24,7 +24,7 @@
 
         /* Divider */
         $section-subtitle-divider-width: 1rem;
-        $section-subtitle-divider-background: $black;
+        $section-subtitle-divider-background: $highlight;
         $section-subtitle-divider-thickness: 5px;
         $section-subtitle-divider-margin: 0.5rem 0 0;
 
