--- a/assets/post/spec/typography.css
+++ b/assets/post/spec/typography.css
@@ -239,7 +239,7 @@ $link-text-decoration: underline;
     outline: none;
 
     /* Exclude any custom classes that you don't want these styles to apply to. */
-    &:not([class*="button"]):not(.alert__list-item-link):not([class*="nav"]):not(.breadcrumbs__item-link):not(.tags__item-link):not(.tabs__tab-item-link):not(.pagination__number):not(.page-title__meta-item-link):not(.language-toggle__item-link) {
+    &:not([class*="button"]):not(.alert__list-item-link):not([class*="nav"]):not(.breadcrumbs__item-link):not(.tags__item-link):not(.tabs__tab-item-link):not(.pagination__number):not(.page-title__meta-item-link):not(.language-toggle__item-link):not([class*="social-icons__item-item-link"]) {
         color: $link-color;
         font-weight: normal;
         transition: color $global-timing $global-easing 0ms;
@@ -251,7 +251,7 @@ $link-text-decoration: underline;
 
     :any-link {
 
-        &:not([class*="button"]):not(.alert__list-item-link):not([class*="nav"]):not(.breadcrumbs__item-link):not(.tags__item-link):not(.tabs__tab-item-link):not(.pagination__number):not(.page-title__meta-item-link):not(.language-toggle__item-link) {
+        &:not([class*="button"]):not(.alert__list-item-link):not([class*="nav"]):not(.breadcrumbs__item-link):not(.tags__item-link):not(.tabs__tab-item-link):not(.pagination__number):not(.page-title__meta-item-link):not(.language-toggle__item-link):not([class*="social-icons__item-item-link"]) {
 
             &:hover {
                 color: $link-color--hover;
