adding lazy load, critical css, preconnect / preload attrs

--- a/assets/post/components/header/header.css
+++ b/assets/post/components/header/header.css
@@ -10,7 +10,7 @@
 
 /* Variables ================================================================ */
 
-    $main-header-padding: 1.5rem 1rem;
+    $main-header-padding: 1.5rem;
     $main-header-background: white;
 
 /* Main Header ============================================================== */
