--- a/assets/post/components/gallery/gallery.css
+++ b/assets/post/components/gallery/gallery.css
@@ -72,6 +72,7 @@
     /* Container */
     .gallery--full {
         height: 100vh;
+        width: 100%;
         background: rgba(0,0,0,0.8);
         position: fixed;
         top: 0;
